# spydertop

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  example_config.yaml  install.sh  pyproject.toml  setup.cfg  setup.py  spydertop.spec  structure.md  textual.md
.github/workflows/: build_and_publish.yml  pull_request.yml
spydertop/: __init__.py  app.py  cli.py  columns.py  config.py  cursorlist.py  kubehelper.py  model.py  recordpool.py  state.py  table.py  utils.py  widgets.py
spydertop/config/: __init__.py  cache.py  config.py  secrets.py
spydertop/constants/: __init__.py  columns.py  palettes.py
spydertop/screens/: __init__.py  config.py  failure.py  feedback.py  footer.py  help.py  loading.py  main.py  meters.py  modals.py  quit.py  setup.py
spydertop/styles/: app.css
spydertop/utils/: __init__.py  cache.py  cursorlist.py  types.py
spydertop/widgets/: __init__.py  form.py  meter.py  table.py
