[metadata]
name = spydertop
url = Docker, https://github.com/spyderbat/spydertop
author = Griffith Thomas
author_email = dev@spyderbat.com
maintainer = Spyderbat
maintainer_email = dev@spyderbat.com
classifiers = 
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
license = MIT
license_files = LICENSE
description = A tool that provides htop-like functionality for any point in time.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    spydertop
    spyderbat
    htop
    top

[options]
packages =
    spydertop
install_requires = 
    asciimatics
    click
    spyderbat-api @ https://github.com/spyderbat/api_examples/archive/refs/heads/main.zip#egg=spyderbat-api-1.0.0&subdirectory=python
    pyyaml
    pyperclip
    importlib-metadata >= 1.0; python_version < "3.8"
python_requires = >=3.6


[options.entry_points]
console_scripts =
    spydertop = spydertop:cli